[package]
name = "kauppalaskin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "*"
scraper = "*"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.reqwest]
version = "0.11.4"
features = ["cookies"]

[dependencies.tokio]
version = "1.17.0"
features = ["full"]
